# embedded_learning

./: .gitignore
esp/esp32/boards/ESP32-DevKitC/projects/blinky/: Cargo.toml  journal.md
esp/esp32/boards/ESP32-DevKitC/projects/blinky/notes/: journal.md
rust/: assembly.md  build_script_configuration_file.md  compiling_linking.md  cortex-m-rt-macros.md  cortex-m-rt.md  crates.md  overview.md  using_board_crate.md
stm32/boards/stm32-f3discovery/projects/blink-led/asm/: Makefile  link.ld
stm32/boards/stm32-f3discovery/projects/blink-led/asm/gcc_function_call_test/: Makefile  test.c
stm32/boards/stm32-f3discovery/projects/blink-led/asm/gcc_variable_test/: Makefile  test.c
stm32/boards/stm32-f3discovery/projects/blink-led/asm/notes/: notes.md
stm32/boards/stm32-f3discovery/projects/blink-led/asm/src/: delay.S  led.S  main.S  runtime.S  vector_table.S
stm32/boards/stm32-f3discovery/projects/blink-led/cxx/: Makefile
stm32/boards/stm32-f3discovery/projects/blink-led/cxx/src/: common.h  delay.cpp  delay.h  led.cpp  led.h  main.cpp  runtime.cpp  vector_table.cpp
stm32/boards/stm32-f3discovery/projects/blink-led/rust/using-board-crate/: Cargo.toml  build.rs  openocd.cfg
stm32/boards/stm32-f3discovery/projects/blink-led/rust/using-board-crate/.cargo/: config.toml
stm32/boards/stm32-f3discovery/projects/blink-led/rust/using-board-crate/src/: main.rs
stm32/boards/stm32-f3discovery/projects/light-led/with-runtime/: Cargo.toml  build.rs
stm32/boards/stm32-f3discovery/projects/light-led/without-runtime/: Cargo.toml  build.rs  link.ld
(+18 files in other folders)
